# test-technique-vif

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
test_technique_vif/: .gitignore  model_fit.py
